# Journal

./: .gitignore  index.html  package-lock.json  package.json  run-tauri-dev.bat  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: goals.rs  journal.rs  mod.rs  tasks.rs
src-tauri/src/database/: connection.rs  models.rs
src-tauri/src/notifications/: scheduler.rs
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Card.tsx  Checkbox.tsx  ColorPicker.tsx  Input.tsx  Modal.tsx  index.ts
src/features/calendar/components/: CalendarContainer.tsx  CalendarDndContext.tsx  DayView.tsx  MonthView.tsx  WeekView.tsx  index.ts
src/features/goals/components/: DailyGoals.tsx  GoalItem.tsx  index.ts
src/features/journal/components/: JournalEntry.tsx  index.ts
src/features/tasks/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx  index.ts
src/hooks/: index.ts  useGoals.ts  useJournal.ts  useTasks.ts
src/services/: database.ts
src/stores/: appStore.ts
src/types/: index.ts
