[package]
name = "journal"
version = "0.1.0"
description = "A beautiful journaling and productivity app"
authors = ["you"]
edition = "2021"

[lib]
name = "journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
dirs = "5"
